test/functional/Sema/missing_argument_c_variadic.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

@no_mangling @c_variadic func printf(s: *Char, p: Int) -> Int;


// CHECK: 11:5: error: Cannot convert ? to (?) -> ?
// CHECK: 5:26: note: Available overload: @c_variadic (*Char, Int32) -> Int32
func main() -> Int {
    printf("We can now print an Int, check this out -> %d\n");
    return 0;
}
